name:                reflex-dom-lazy-grid-example
version:             0.1.0.0
synopsis:            Reflex.Dom.LazyGrid demo
--description:         
license:             MIT
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
copyright:           2016 Maciej Kazulak
category:            FRP, Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable table2
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.8 && <4.9, aeson >=0.9 && <0.10, hashmap >=1.3 && <1.4
  -- hs-source-dirs:      
  default-language:    Haskell2010