name:                reflex-dom-lazy-grid-example
version:             0.1.0.0
synopsis:            Reflex.Dom.LazyGrid example
description:         Example usage of a lazy grid component that can be found
                     at http://github.com/mulderr/reflex-dom-lazy-grid
license:             MIT
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
copyright:           2016 Maciej Kazulak
category:            FRP, Web
build-type:          Simple
cabal-version:       >=1.10

executable reflex-dom-lazy-grid-example
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       aeson        >= 0.9      && < 0.10
                     , base         >= 4.8      && < 4.9
                     , containers   >= 0.5      && < 0.6
                     , lens         >= 4.0      && < 5.0
                     , reflex       >= 0.4      && < 0.5
                     , reflex-dom   >= 0.3      && < 0.4
                     , reflex-dom-lazy-grid >= 0.1 && < 0.2
                     , safe         >= 0.3      && < 0.4
